backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vea-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vea-backend
  template:
    metadata:
      labels:
        app: vea-backend
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: backend-pool 
      containers:
      - name: vea-backend
        image: us-docker.pkg.dev/gen-lang-client-0057517563/vea-service/vea-backend:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "7"
          limits:
            cpu: "8"
---
apiVersion: v1
kind: Service
metadata:
  name: vea-backend-service
spec:
  selector:
    app: vea-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
  loadBalancerIP: REDACTED_PUBLIC_IP_2
