frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vea-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vea-frontend
  template:
    metadata:
      labels:
        app: vea-frontend
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
      - name: vea-frontend
        image: us-docker.pkg.dev/gen-lang-client-0057517563/vea-service/vea-frontend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: vea-frontend-service
spec:
  selector:
    app: vea-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: REDACTED_PUBLIC_IP_1
